# cwasm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example.c  fuzz.js
include/cwasm/: consts.h  cwasm.h  type.h  util.h
include/cwasm/section/: code.h  custom.h  data.h  data_count.h  element.h  export.h  function.h  global.h  import.h  memory.h
src/: CMakeLists.txt  consts.h  cwasm.c  cwasm.h  cwasm_type.c  cwasm_type.h  log.h  pb.c  pb.h  test-main.c  test.c  type.c  type.h  vector.h
src/section/: code.c  code.h  custom.c  custom.h  cwasm_code.c  cwasm_data.c  cwasm_element.c  cwasm_element.h  cwasm_export.c  cwasm_export.h  cwasm_function.c  cwasm_global.c  cwasm_global.h  cwasm_import.c  cwasm_import.h  cwasm_memory.c  cwasm_memory.h  cwasm_table.c  cwasm_table.h  cwasm_type.c  data.c  data.h  data_count.c  data_count.h  element.c  element.h  export.c  export.h  function.c  function.h  global.c  global.h  import.c  import.h  memory.c  memory.h  table.c  table.h  type.c  type.h
